--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -60,7 +60,7 @@ main{
     height: 42px;
     width: 100%;
     position: fixed;
-    background-color: #ef0017;
+    background-color: #76072d;
     z-index: 99;
 }
 .main_nav .serch{
