--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,6 +13,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link href="{% static 'main/images/favicon.png' %}" rel="icon">
+
+
+
 	<script type="application/x-javascript">
 		addEventListener("load", function() {
 			setTimeout(hideURLbar, 0);
@@ -59,11 +62,16 @@
 	{% endblock main_head %}
 </head>
 
+
+
 <body>
 	<nav class="main_nav" id="main_nav">
 		<div class="container">
 			<div class="nav_links">
 				<a href="{% url 'home' %}" class="logo">My SwiftCart</i></a>
+                 <!-Change From Here->
+
+
 				<form class="form-inline my-2 my-lg-0 serch" action="/search">
 					<input class="form-control mr-sm-2" type="search" placeholder="Search for Anything You Want"
 						aria-label="Search" name="query">
@@ -82,15 +90,17 @@
 						src="{{request.user.userdetail.photo.url}}"
 						style="height: 20px; width: 20px; border-radius: 10px; margin-right: 3px;">{{request.user.first_name}}</a>&nbsp;|
 				<a href="{% url 'logout' %}">Logout</a>
+
 				{% else %}
 				<a href="{% url 'login' %}">Login</a>&nbsp;|
 				<a href="{% url 'signup' %}">Register</a>&nbsp;|
 				<a href="{% url 'seller_signup' %}">Seller</a>
 				{% endif %}
 			</div>
+
 		</div>
 	</nav>
-	<header id="navheader">
+	<header id="navheader ">
 		<div style="overflow-y: scroll; height: 90%;">
 			<ul>
 				{% for cat in category %}
@@ -113,10 +123,10 @@
 			<a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
 			<a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 			<a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a> |
-			&copy; 2019-20
+			&copy; 2022-2023
 		</section>
 	</header>
-	<a class="menu_bar"><i class="fa fa-bars" aria-hidden="true"></i></a>
+	<a class="menu_bar bg-light"><i class="fa fa-bars" aria-hidden="true"></i></a>
 	<main class="" id="menu_close">
 		{% block main_body %}
 		{% endblock main_body %}
